--- a/src/app/components/editor-dashboard/priority-lifecycle-dialog/priority-lifecycle-dialog.component.html
+++ b/src/app/components/editor-dashboard/priority-lifecycle-dialog/priority-lifecycle-dialog.component.html
@@ -8,7 +8,7 @@
 
     <form [formGroup]="priorityForm">
       <div class="form-field">
-        <label>🔥 Priority</label>
+        <label>🔥 Priority (-1 to 10)</label>
         <input 
           type="number" 
           formControlName="priority"
