View submission implementation commit

--- a/src/app/components/journalist-dashboard/journalist-dashboard.component.html
+++ b/src/app/components/journalist-dashboard/journalist-dashboard.component.html
@@ -87,10 +87,11 @@
           <p>View your submitted articles and their review status.</p>
         </mat-card-content>
         <mat-card-actions>
-          <button mat-raised-button>
-            <mat-icon>assignment</mat-icon>
-            View Submissions
-          </button>
+          <button mat-raised-button color="primary" (click)="navigateToSubmissions()">
+  <mat-icon>assignment</mat-icon>
+  View Submissions
+</button>
+
         </mat-card-actions>
       </mat-card>
     </div>
