article count disable

--- a/src/app/components/journalist-dashboard/journalist-dashboard.component.html
+++ b/src/app/components/journalist-dashboard/journalist-dashboard.component.html
@@ -18,10 +18,10 @@
         <mat-icon>badge</mat-icon>
         <span>{{ currentUser?.UserRole }}</span>
       </button>
-       <button mat-menu-item disabled>
+       <!-- <button mat-menu-item disabled>
         <mat-icon>article</mat-icon>
         <span>Articles: {{ currentUser?.NewsCount }}</span>
-      </button> 
+      </button>  -->
       <!-- <mat-divider></mat-divider> -->
       <button mat-menu-item (click)="logout()">
         <mat-icon>logout</mat-icon>
