Added some changes in Report generation page

--- a/src/app/components/reports/reports.component.html
+++ b/src/app/components/reports/reports.component.html
@@ -144,7 +144,7 @@
         *ngIf="subscriptionReport"
         class="download-btn"
         (click)="downloadReport(subscriptionReport, 'subscription-report')">
-        📄 Download TXT
+        📄 Download PDF
       </button>
     </div>
 
@@ -164,7 +164,7 @@
         *ngIf="newsReport"
         class="download-btn"
         (click)="downloadReport(newsReport, 'news-report')">
-        📄 Download TXT
+        📄 Download PDF
       </button>
     </div>
 
@@ -184,7 +184,7 @@
         *ngIf="adReport"
         class="download-btn"
         (click)="downloadReport(adReport, 'ad-report')">
-        📄 Download TXT
+        📄 Download PDF
       </button>
     </div>
   </div>
