--- a/src/app/components/editor-dashboard/priority-lifecycle-dialog/priority-lifecycle-dialog.component.scss
+++ b/src/app/components/editor-dashboard/priority-lifecycle-dialog/priority-lifecycle-dialog.component.scss
@@ -296,3 +296,22 @@
   }
 }
 
+.instruction-btn {
+  background-color: #f5f5f5;
+  border: 1px solid #b53f3f;
+  color: #b53f3f;
+  cursor: pointer;
+  margin-left: 0.5rem;
+  margin-bottom: 0.5rem;  
+  font-weight: 600;
+  padding: 4px 8px;
+  border-radius: 4px;
+  display: inline-flex;
+  align-items: center;
+  transition: background-color 0.3s ease;
+}
+
+
+.instruction-btn:hover {
+  background-color: #fdecea;
+}
