--- a/src/app/components/editor-dashboard/editor-dashboard.component.html
+++ b/src/app/components/editor-dashboard/editor-dashboard.component.html
@@ -181,6 +181,11 @@
     <ng-container *ngIf="selectedSection === 'users'">
       <app-user-management></app-user-management>
     </ng-container>
-    
+      <ng-container *ngIf="selectedSection === 'leaderboard'">
+      <div *ngIf="leaderboardLoading">Loading leaderboard data...</div>
+      <app-leaderboard *ngIf="leaderboard" [data]="leaderboard"></app-leaderboard>
+    </ng-container>
+
+
   </div>
 </div>
