feedback commit import changes

--- a/src/app/components/editor-dashboard/editor-dashboard.component.html
+++ b/src/app/components/editor-dashboard/editor-dashboard.component.html
@@ -181,6 +181,12 @@
     <ng-container *ngIf="selectedSection === 'users'">
       <app-user-management></app-user-management>
     </ng-container>
+
+    <!-- Feedback Section -->
+      <ng-container *ngIf="selectedSection === 'feedback'">
+        <app-feedback-list [feedbacks]="feedbacks"></app-feedback-list>
+      </ng-container>
+
     
   </div>
 </div>
